CREATE TABLE Organization(
    "Id" INTEGER,
    "Name" VARCHAR(50) NOT NULL,
    "Description" TEXT,

    PRIMARY KEY("Id")
)