namespace Organization.Controllers.DTO.POST;

public record BoardDTO
{
    public string Name { get; init; }
}