namespace Organization.Controllers.DTO.POST;

public record ProjectDTO
{
    public string Name { get; init; }
}